# asr_transcribe_script

./: README.md  design_document.md  main.py  pyproject.toml
audio_files/amharic/: amharic_sample_2.flac
notebooks/: load_dataset.ipynb  transcribe.ipynb
transcription_data/: MCF_Languages.xlsx  ~$MCF_Languages.xlsx
